[package]
name = "vjoy-sys"
version = "0.3.0"
edition = "2021"
authors = ["Maximillian Pfeil <pfeil.maximillian@gmail.com>"]
description = "Rust bindings to vJoy - a virtual input device driver for Windows"
repository = "https://github.com/ArrowMaxGithub/vjoy-sys"
license = "MIT OR Apache-2.0"
keywords = ["input", "virtual", "joystick", "vjoy", "gamepad"]
categories = ["external-ffi-bindings", "emulators", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"

[build-dependencies]
bindgen = "0.64.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]